# music-analysis-kb

./: .gitignore  LICENSE  README.md
plugins/music-kb/: .mcp.json  README.md  pyproject.toml
plugins/music-kb/.codex-plugin/: plugin.json
plugins/music-kb/references/: cnb-storage-policy.json  fallback-download-profile.json  kugou-chart-profile.json  validated-operations.json
plugins/music-kb/scripts/: benchmark_100k.py  build_song_inventory.py  capture_kugou_chart.py  cnb_campaign_repository.py  cnb_storage_lifecycle.py  download_music_fallback.py  download_music_queue.py  fallback_parallel.py  install-local.sh  launch_music_fallback_worker.py  prepare_download_queue.py  prepare_fallback_queue.py  prepare_weekly_cnb_campaign.py  prune_audio_library.py  pull-release.sh  run_claude_download.py  run_claude_fallback.py  run_claude_lyrics_backfill.py
plugins/music-kb/tests/: conftest.py  test_campaign_delivery.py  test_capture_kugou_chart.py  test_cli.py  test_cnb_campaign_repository.py  test_cnb_storage_lifecycle.py  test_distribution.py  test_download_music_queue.py  test_fallback_download.py  test_lyrics.py  test_mcp_server.py  test_operation_context.py  test_plugin_contract.py  test_preflight.py  test_prepare_download_queue.py  test_prepare_weekly_cnb_campaign.py  test_prune_audio_library.py  test_publish_state.py  test_repository.py  test_retrieval.py  test_run_claude_download.py  test_run_claude_fallback.py  test_run_claude_lyrics_backfill.py  test_scale.py  test_snapshot.py  test_song_inventory.py  test_tagging.py  test_weekly_orchestration.py  test_workflow.py
(+104 files in other folders)
